k8s/cicd-aws/aws-nexus/nexus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nexus
  name: nexus
  namespace: cicd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nexus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: sonatype/nexus3:3.37.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 1000
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 60
        name: nexus
        ports:
        - containerPort: 8081
          name: web
          protocol: TCP
        - containerPort: 5000
          name: http-5000
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 8048Mi
          requests:
            cpu: "4"
            memory: 8048Mi
        securityContext:
          privileged: false
          runAsNonRoot: false
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pvc
