k8s/cicd-aws/aws-nexus/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus-service
  namespace: cicd
spec:
  ports:
  - name: http-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: http-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: http-5002
    port: 5002
    protocol: TCP
    targetPort: 5002
  selector:
    app: nexus
  type: NodePort
