k8s/cicd-aws/aws-nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cicd
  name: nexus-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:429636537981:certificate/f5667463-30d6-40bf-a172-3bf2dd86e3fc
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  #ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nexus
              port:
                number: 8081
